# generic_agents_group

./: README.md  pyproject.toml
agent_hierarchy_generator/: agent.py  main.py  task.py  utils.py
src/generic_agents/: crew.py  main.py  tools.py
